force-app/main/default/objects/RenewalOppOwner__c/RenewalOppOwner__c.object-meta.xml
<CustomObject>
    <customSettingsType>Hierarchy</customSettingsType>
    <label>Renewal Opp Settings</label>
</CustomObject>