force-app/main/default/objects/RenewalOppOwner__c/fields/First_Warning__c.field-meta.xml
<CustomField>
    <fullName>First_Warning__c</fullName>
    <label>First Warning</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>