force-app/main/default/objects/RenewalOppOwner__c/fields/Second_Warning__c.field-meta.xml
<CustomField>
    <fullName>Second_Warning__c</fullName>
    <label>Second Warning</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>