force-app/main/default/objects/RenewalOppOwner__c/fields/Third_Warning__c.field-meta.xml
<CustomField>
    <fullName>Third_Warning__c</fullName>
    <label>No Activity In Days</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>